city h1 no longer covered by nav

--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,18 @@
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    'nav nav nav nav nav nav nav'
-    '. header header header header header .'
-    '. header header header header header .'
-    '. header header header header header .'
-    '. . . week . . .'
-    '. . . austin . . .'
-    '. . . austin . . .'
-    '. houston . austin . detroit  .'
-    '.  houston . . . detroit  .'
-    '. houston . raleigh . detroit  .'
-    '. . . raleigh . . .'
-    '. . . raleigh . . .';
+    "nav nav nav nav nav nav nav"
+    ". header header header header header ."
+    ". header header header header header ."
+    ". header header header header header ."
+    ". . . week . . ."
+    ". . . austin . . ."
+    ". . . austin . . ."
+    ". houston . austin . detroit  ."
+    ".  houston . . . detroit  ."
+    ". houston . raleigh . detroit  ."
+    ". . . raleigh . . ."
+    ". . . raleigh . . .";
 }
 h1 {
   text-align: center;
@@ -79,7 +79,7 @@ header {
   background-color: black;
   color: ghostwhite;
   border-radius: 5px;
-  cursor: pointer
+  cursor: pointer;
 }
 
 #detroit {
@@ -87,47 +87,47 @@ header {
   background-color: black;
   color: ghostwhite;
   border-radius: 5px;
-  cursor: pointer
+  cursor: pointer;
 }
 #houston {
   border: 10px solid black;
   background-color: black;
   color: ghostwhite;
   border-radius: 5px;
-  cursor: pointer
+  cursor: pointer;
 }
 #raleigh {
   border: 10px solid black;
   background-color: black;
   color: ghostwhite;
   border-radius: 5px;
-  cursor: pointer
+  cursor: pointer;
 }
 #home {
   border: 10px solid black;
   background-color: black;
   color: ghostwhite;
   border-radius: 5px;
-  cursor: pointer
+  cursor: pointer;
 }
 #login {
   border: 10px solid black;
   background-color: black;
   color: ghostwhite;
   border-radius: 5px;
-  cursor: pointer
+  cursor: pointer;
 }
 #logout {
   border: 10px solid black;
   background-color: black;
   color: ghostwhite;
   border-radius: 5px;
-  cursor: pointer
+  cursor: pointer;
 }
 #login:hover {
   transition: 0.3s;
   background-color: #15ab5c;
-  border: 10px solid #15ab5c
+  border: 10px solid #15ab5c;
 }
 #logout:hover {
   transition: 0.3s;
@@ -182,6 +182,7 @@ header {
   border-radius: 20px;
 }
 
-.show-h1 {
+.show-h1,
+.city-h1 {
   margin-top: 75px;
 }
